Network works, mapping works

--- a/world.html
+++ b/world.html
@@ -29,6 +29,10 @@ p {
     text-align: center;
 }
 
+a:link, a:visited {
+  color: #30394F;
+}
+
 section {
     display: block;
 }
@@ -172,12 +176,12 @@ rect {
         <h1>Gendered Innovations</h1>
     </div>
 
-<!--     <div id="nav">
+    <div id="nav">
       <ul>
-        <li>Gender and Home Institution</li>
-        <li>Interdisciplinary of Workshops</li>
+        <li><a href="world.html">Gender and Home Institution</a></li>
+        <li><a href="network.html">Interdisciplinary of Workshops</a></li>
       </ul>
-    </div> -->
+    </div>
 
 <script>
 
