--- a/network.html
+++ b/network.html
@@ -1,53 +1,364 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+
+<link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
+
 <style>
 
-/* style here */
+/*
+dk blue: #30394F
+red: #ff434c
+lt blue: #6aceeb
+gray: #ede8df
+white: #fffbed
+*/
+
+body {
+    display: block;
+    margin: 0 auto;
+    font-family: 'PT Sans','Helvetica Neue',sans-serif;
+    color: #30394F;
+    background: #EDE8DF;
+    font-size: 18px;
+}
+
+p {
+    width: 960px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+a:link, a:visited {
+  color: #30394F;
+}
+
+section {
+    display: block;
+}
+
+section .description {
+    width: 100%;
+    display: block;
+    background-color: #fafafa;
+}
+
+.container {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+svg {
+    background: #EDE8DF;
+    display: block;
+    margin: 0 auto;
+}
+
+.points {
+  stroke: #5E709B;
+  stroke-width: 1;
+  opacity: .8;
+ }
+
+.points text {
+  font: 11px sans-serif;
+  text-anchor: middle;
+}
+
+.stroke {
+  fill: none;
+  stroke: none;
+  stroke-width: 3px;
+}
+
+.fill {
+  fill: #EDE8DF;
+}
+
+.background {
+  fill: #EDE8DF;
+}
+
+h1 {
+    color: #30394F;
+    text-align: center;
+    margin-bottom: 20px;
+    font-weight: 200;
+    font-family: 'Raleway', sans-serif;
+    font-size: 48px;
+}
+
+rect {
+  fill: none;
+  pointer-events: all;
+}
+
+.feature {
+  fill: #FFFBED;
+  cursor: pointer;
+}
+
+.feature.active {
+  fill: orange;
+}
+
+.mesh {
+  fill: none;
+  stroke: #EDE8DF;
+  stroke-width: .5px;
+  stroke-linejoin: round;
+}
+
+#nav {
+    color: #BFBCB2;
+    margin: 7em 0 0 0;
+    text-align: center;
+    text-transform: none;
+    letter-spacing: 1px;
+    font-size: 0.75em;
+    line-height: 2px;
+}
+
+#nav ul {
+  list-style: none;
+  margin: 10;
+  padding: 10;
+}
+
+#nav ul li {
+  display: inline;
+}
+
+#nav ul li:not(:first-child):before {
+  color: #BFBCB2;
+  content: " · ";
+  padding: 0 4px;
+}
+
+#about {
+    color: #BFBCB2;
+    margin: 7em 0 0 0;
+    text-align: right;
+    text-transform: none;
+    letter-spacing: 1px;
+    font-size: 0.75em;
+    line-height: 2px;
+}
+
+#about ul {
+  list-style: none;
+  margin: 10;
+  padding: 10;
+}
+
+#about ul li {
+  display: inline;
+}
+
+#about ul li:not(:first-child):before {
+  color: #BFBCB2;
+  content: " · ";
+  padding: 0 4px;
+}
+
+/* Networks */
+
+.link {
+  fill: none;
+  stroke: #666;
+  stroke-width: 1.5px;
+}
+
+.node circle {
+  stroke: #fff;
+  stroke-width: 1.5px;
+}
+
+text {
+  font: 10px sans-serif;
+  pointer-events: none;
+}
 
 </style>
 
 <body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+
+<script src="./d/d3.v3.min.js"></script>
 <script src="http://d3js.org/d3.geo.projection.v0.min.js"></script>
-<script src="http://d3js.org/topojson.v1.min.js"></script>
+<script src="./d/d3.queue.v1.min.js"></script>
+<script src="./d/topojson.v1.min.js"></script>
+
+<section style="background-color: #EDE8DF; width: 100%; padding-top: 50px;">
+
+    <div>
+        <h1>Gendered Innovations</h1>
+    </div>
+
+    <div id="nav">
+      <ul>
+        <li><a href="world.html">Gender and Home Institution</a></li>
+        <li><a href="network.html">Interdisciplinary of Workshops</a></li>
+      </ul>
+    </div>
+
 <script>
 
-// Get our data ready
-queue()
-    .defer(d3.json, "/d/world-50m.json")
-    .defer(d3.csv, "/d/interdisciplinary.csv")
-    .await(ready);
+// ========================== Global variables ========================== 
 
-var w = 1280,
-    h = 800,
-    node,
-    link;
+var width = 1200,
+    height = 450;
 
-var force = d3.layout.force()
-    .charge(-120)
-    .linkDistance(30)
-    .size([w, h - 160]);
+var color = d3.scale.category20();
 
-var svg = d3.select("body").append("svg")
+// ========================== Data prep ========================== 
+
+
+d3.csv("./d/interdisciplinary.csv", function(error, csv_data) {
+
+// Console =============
+  // var stanford = d3.nest()
+  //     .key(function(d) { return d.workshop_location_1; })
+  //     .entries(csv_data);
+
+  // var berlin = d3.nest()
+  //     .key(function(d) { return d.workshop_location_2; })
+  //     .entries(csv_data);
+
+  // var maastricht = d3.nest()
+  //     .key(function(d) { return d.workshop_location_3; })
+  //     .entries(csv_data);
+
+  // var paris = d3.nest()
+  //     .key(function(d) { return d.workshop_location_4; })
+  //     .entries(csv_data);
+
+  // var brussels = d3.nest()
+  //     .key(function(d) { return d.workshop_location_5; })
+  //     .entries(csv_data);
+
+  // var madrid = d3.nest()
+  //     .key(function(d) { return d.workshop_location_6; })
+  //     .entries(csv_data);
+
+  // var cambridge = d3.nest()
+  //     .key(function(d) { return d.workshop_location_7; })
+  //     .entries(csv_data);
+
+  // console.log(stanford);
+  // console.log(berlin);
+  // console.log(maastricht);
+  // console.log(paris);
+  // console.log(brussels);
+  // console.log(madrid);
+  // console.log(cambridge);
+// Console End =============
+
+  // ========================== Starting the network ========================== 
+
+  var nodes = {};
+
+  // compute nodes from links
+  csv_data.forEach(function(link) {
+      link.source = nodes[link.discipline] || (nodes[link.discipline] = {name: link.discipline});
+      link.target = nodes[link.workshop_location_1] || (nodes[link.workshop_location_1] = {name: link.workshop_location_1});
+  });
+
+  var force = d3.layout.force()
+    .nodes(d3.values(nodes))
+    .links(csv_data)
+    .size([width, height])
+    .linkDistance(60)
+    .charge(-300)
+    .on("tick", tick)
+    .start();
+
+  var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height);
 
-d3.csv("/d/interdisciplinary.csv", function(error, graph) {
+  // add the links
+  var path = svg.append("g").selectAll("path")
+    .data(force.links())
+  .enter().append("path")
+    .attr("class", "link");
 
-  force
-    .nodes(graph.nodes)
-    .links(graph.links)
-    .start();
+  // define the nodes
+  var node = svg.selectAll(".node")
+    .data(force.nodes())
+  .enter().append("g")
+    .attr("class", "node")
+    .on("mouseover", mouseover)
+    .on("mouseout", mouseout)
+    .call(force.drag);
 
-  var link = svg.selectAll(".link")
-      .data(graph.links)
-    .enter().append("line")
-      .attr("class", "link")
-      .style("stroke-width", function(d) { return Math.sqrt(d.value); });
+  // add the nodes
+  node.append("circle")
+    .attr("r", 5)
+    .style("fill", function(d) { console.log('d: ', d); return color(d.name); });
 
-});
+  // add the text 
+  node.append("text")
+    .attr("x", 12)
+    .attr("dy", ".35em")
+    .text(function(d) { return d.name; });
+
+// ========================== Mapping the network ==========================
+
+// jadf;kadjsfl;afj
+
+// ========================== Functions ==========================
+
+  // add the lines
+  function tick() {
+    path.attr("d", function(d) {
+        var dx = d.target.x - d.source.x,
+            dy = d.target.y - d.source.y,
+            dr = Math.sqrt(dx * dx + dy * dy);
+        return "M" + 
+            d.source.x + "," + 
+            d.source.y + "A" + 
+            dr + "," + dr + " 0 0,1 " + 
+            d.target.x + "," + 
+            d.target.y;
+    });
+
+    node
+        .attr("transform", function(d) { 
+            return "translate(" + d.x + "," + d.y + ")"; });
+    }
+
+  function mouseover() {
+      d3.select(this).select("circle").transition()
+          .duration(750)
+          .attr("r", 8);
+      // d3.select(this).select("text").transition()
+      //     .duration(750)
+      //     .style("font-size","10px");
+    }
+    
+    function mouseout() {
+      d3.select(this).select("circle").transition()
+          .duration(750)
+          .attr("r", 5);
+    }
+
+  });
 
 </script>
+
+</section>
+
+<!-- <section class="description">
+<p>Something something something.</p>
+</section>
+
+<div id="about">
+  <ul>
+    <li>Londa Schiebinger</li>
+    <li>Stanford University</li>
+    <li>Visualized by Jason A. Heppler</li>
+  </ul>
+</div> -->
 
 </body>
 </html>
