Updating network files and network visualizations

--- a/world.html
+++ b/world.html
@@ -179,7 +179,8 @@ rect {
     <div id="nav">
       <ul>
         <li><a href="world.html">Gender and Home Institution</a></li>
-        <li><a href="network.html">Interdisciplinary of Workshops</a></li>
+        <li><a href="discipline.html">Interdisciplinarity of Workshops</a></li>
+        <li><a href="network.html">Workshop Networks</a></li>
       </ul>
     </div>
 
