--- a/interdiscipline.html
+++ b/interdiscipline.html
@@ -19,7 +19,7 @@ body {
     margin: 0 auto;
     font-family: 'PT Sans','Helvetica Neue',sans-serif;
     color: #30394F;
-    background: #EDE8DF;
+    background: #CBCECF;
     font-size: 18px;
 }
 
@@ -44,12 +44,12 @@ section .description {
 }
 
 .container {
-    max-width: 600px;
+    max-width: 900px;
     margin: 0 auto;
 }
 
 svg {
-    background: #EDE8DF;
+    background: #CBCECF;
     display: block;
     margin: 0 auto;
 }
@@ -72,11 +72,11 @@ svg {
 }
 
 .fill {
-  fill: #EDE8DF;
+  fill: #E4E7E9;
 }
 
 .background {
-  fill: #EDE8DF;
+  fill: #E4E7E9;
 }
 
 h1 {
@@ -94,7 +94,7 @@ rect {
 }
 
 .feature {
-  fill: #FFFBED;
+  fill: #E4E7E9;
   cursor: pointer;
 }
 
@@ -175,7 +175,7 @@ rect {
 }
 
 text {
-  font: 10px sans-serif;
+  font: 12px sans-serif;
   pointer-events: none;
 }
 
@@ -188,7 +188,7 @@ text {
 <script src="./d/d3.queue.v1.min.js"></script>
 <script src="./d/topojson.v1.min.js"></script>
 
-<section style="background-color: #EDE8DF; width: 100%; padding-top: 50px;">
+<section style="background-color: #CBCECF; width: 100%; padding-top: 50px;">
 
     <div>
         <h1>Gendered Innovations</h1>
@@ -209,39 +209,84 @@ text {
 
 // ========================== Global variables ========================== 
 
-var width = 1200,
+var width = 1300,
     height = 650;
 
-var color = d3.scale.category20();
+queue()
+    .defer(d3.csv, "./d/network.csv")
+    .defer(d3.json, "/d/world-50m.json")
+    .defer(d3.csv, "/d/locations_lat_long.csv")
+    .await(ready);
 
-// ========================== Data prep ========================== 
+function ready(error, csv_data, world, locations) {
 
+  // ========================== Mapping the network ==========================
 
-d3.csv("./d/network.csv", function(error, csv_data) {
+  var map_projection = d3.geo.eckert3()
+      .translate([width / 2, height / 2])
+      .rotate([50, 0])
+      .center([0, 40])
+      .scale(550);
 
-  // ========================== Starting the network ========================== 
+  var map_path = d3.geo.path()
+      .projection(map_projection);
+
+  var svg = d3.select("body").append("svg")
+      .attr("width", width)
+      .attr("height", height);
+
+  svg.append("rect")
+    .attr("width", width)
+    .attr("height", height);
+
+  var g = svg.append("g");
+
+  g.selectAll("path")
+      .data(topojson.feature(world, world.objects.countries).features)
+    .enter().append("path")
+      .attr("d", map_path)
+      .attr("class", "feature");
+
+  g.append("path")
+      .datum(topojson.mesh(world, world.objects.countries, function(a, b) { return a !== b; }))
+      .attr("class", "mesh")
+      .attr("d", map_path);
+
+  // ========================== Network viz ==========================
 
   // array of nodes
   var nodes = {};
 
   // compute nodes from links
   csv_data.forEach(function(link) {
+      key = link.target + '@' + link.source;
+      link.target = nodes[key] || (nodes[key] = {name: link.target});
       link.source = nodes[link.source] || (nodes[link.source] = {name: link.source});
-      link.target = nodes[link.target] || (nodes[link.target] = {name: link.target});
-  });
+  })
+
+  var locationHash = {};
+
+  for (loc in locations) {
+    locationHash[locations[loc].location] = locations[loc];
+  }
+
+  for (n in nodes) {
+    if(locationHash[nodes[n].name]) {
+      nodes[n].lat = locationHash[nodes[n].name].latitude
+      nodes[n].long = locationHash[nodes[n].name].longitude
+
+    }
+  }
 
   var force = d3.layout.force()
     .nodes(d3.values(nodes))
     .links(csv_data)
     .size([width, height])
-    .linkDistance(60)
-    .charge(-900)
+    .linkDistance(70)
+    .charge(-10)
+    .gravity(0)
     .on("tick", tick)
     .start();
-
-  var svg = d3.select("body").append("svg")
-    .attr("width", width)
-    .attr("height", height);
 
   // add the edges
   var path = svg.append("g").selectAll("path")
@@ -261,7 +306,7 @@ d3.csv("./d/network.csv", function(error, csv_data) {
   // add the nodes
   node.append("circle")
     .attr("r", 5)
-    .style("fill", function(d) { console.log('d: ', d); return color(d.name); });
+    .style("fill", "#8a0000");
 
   // add the text 
   node.append("text")
@@ -269,14 +314,19 @@ d3.csv("./d/network.csv", function(error, csv_data) {
     .attr("dy", ".35em")
     .text(function(d) { return d.name; });
 
-  // ========================== Mapping the network ==========================
+    for (n in nodes) {
+      if(nodes[n].long) {
+        var projectedNode = map_projection([nodes[n].long,nodes[n].lat])
+        nodes[n].x = projectedNode[0];
+        nodes[n].px = projectedNode[0];
+        nodes[n].y = projectedNode[1];
+        nodes[n].py = projectedNode[1];
+        nodes[n].fixed = true;
 
+      }
 
-  var projection = d3.geo.eckert3()
-      .translate([width / 2, height / 2])
-      .rotate([50, 0])
-      .center([0, 40])
-      .scale(550);
+    }
+
 
   // ========================== Functions ==========================
 
@@ -310,7 +360,7 @@ d3.csv("./d/network.csv", function(error, csv_data) {
         .duration(750)
         .attr("r", 5);
   }
-});
+};
 
 </script>
 
