--- a/interdiscipline.html
+++ b/interdiscipline.html
@@ -4,182 +4,7 @@
 <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
 
-<style>
-
-/*
-dk blue: #30394F
-red: #ff434c
-lt blue: #6aceeb
-gray: #ede8df
-white: #fffbed
-*/
-
-body {
-    display: block;
-    margin: 0 auto;
-    font-family: 'PT Sans','Helvetica Neue',sans-serif;
-    color: #30394F;
-    background: #CBCECF;
-    font-size: 18px;
-}
-
-p {
-    width: 960px;
-    margin: 0 auto;
-    text-align: center;
-}
-
-a:link, a:visited {
-  color: #30394F;
-}
-
-section {
-    display: block;
-}
-
-section .description {
-    width: 100%;
-    display: block;
-    background-color: #fafafa;
-}
-
-.container {
-    max-width: 900px;
-    margin: 0 auto;
-}
-
-svg {
-    background: #CBCECF;
-    display: block;
-    margin: 0 auto;
-}
-
-.points {
-  stroke: #5E709B;
-  stroke-width: 1;
-  opacity: .8;
- }
-
-.points text {
-  font: 11px sans-serif;
-  text-anchor: middle;
-}
-
-.stroke {
-  fill: none;
-  stroke: none;
-  stroke-width: 3px;
-}
-
-.fill {
-  fill: #E4E7E9;
-}
-
-.background {
-  fill: #E4E7E9;
-}
-
-h1 {
-    color: #30394F;
-    text-align: center;
-    margin-bottom: 20px;
-    font-weight: 200;
-    font-family: 'Raleway', sans-serif;
-    font-size: 48px;
-}
-
-rect {
-  fill: none;
-  pointer-events: all;
-}
-
-.feature {
-  fill: #E4E7E9;
-  cursor: pointer;
-}
-
-.feature.active {
-  fill: orange;
-}
-
-.mesh {
-  fill: none;
-  stroke: #EDE8DF;
-  stroke-width: .5px;
-  stroke-linejoin: round;
-}
-
-#nav {
-    color: #BFBCB2;
-    margin: 7em 0 0 0;
-    text-align: center;
-    text-transform: none;
-    letter-spacing: 1px;
-    font-size: 0.75em;
-    line-height: 2px;
-}
-
-#nav ul {
-  list-style: none;
-  margin: 10;
-  padding: 10;
-}
-
-#nav ul li {
-  display: inline;
-}
-
-#nav ul li:not(:first-child):before {
-  color: #BFBCB2;
-  content: " · ";
-  padding: 0 4px;
-}
-
-#about {
-    color: #BFBCB2;
-    margin: 7em 0 0 0;
-    text-align: right;
-    text-transform: none;
-    letter-spacing: 1px;
-    font-size: 0.75em;
-    line-height: 2px;
-}
-
-#about ul {
-  list-style: none;
-  margin: 10;
-  padding: 10;
-}
-
-#about ul li {
-  display: inline;
-}
-
-#about ul li:not(:first-child):before {
-  color: #BFBCB2;
-  content: " · ";
-  padding: 0 4px;
-}
-
-/* Network styling */
-
-.link {
-  fill: none;
-  stroke: #666;
-  stroke-width: 1.5px;
-}
-
-.node circle {
-  stroke: #fff;
-  stroke-width: 1.5px;
-}
-
-text {
-  font: 12px sans-serif;
-  pointer-events: none;
-}
-
-</style>
+<link rel="stylesheet" href="screen.css" type="text/css">
 
 <body>
 
@@ -188,7 +13,7 @@ text {
 <script src="./d/d3.queue.v1.min.js"></script>
 <script src="./d/topojson.v1.min.js"></script>
 
-<section style="background-color: #CBCECF; width: 100%; padding-top: 50px;">
+<section style="width: 100%; padding-top: 50px;">
 
     <div>
         <h1>Gendered Innovations</h1>
@@ -198,7 +23,6 @@ text {
       <ul>
         <li><a href="index.html">Gender and Home Institution</a></li>
         <li><a href="interdiscipline.html">Interdisciplinarity of Workshops</a></li>
-        <li><a href="network.html">Workshop Networks</a></li>
       </ul>
     </div>
 
