--- a/interdiscipline.html
+++ b/interdiscipline.html
@@ -5,13 +5,20 @@
 <link href='http://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
 
 <link rel="stylesheet" href="screen.css" type="text/css">
+<script src="./d/d3.v3.min.js"></script>
+<script src="http://d3js.org/d3.geo.projection.v0.min.js" charset="utf-8"></script>
+<script src="./d/d3.queue.v1.min.js"></script>
+<script src="./d/topojson.v1.min.js"></script>
 
 <body>
 
-<script src="./d/d3.v3.min.js"></script>
-<script src="http://d3js.org/d3.geo.projection.v0.min.js"></script>
-<script src="./d/d3.queue.v1.min.js"></script>
-<script src="./d/topojson.v1.min.js"></script>
+<script src="berlin.js"></script>
+<script src="cambridge.js"></script>
+<script src="brussels.js"></script>
+<script src="maastricht.js"></script>
+<script src="madrid.js"></script>
+<script src="paris.js"></script>
+<script src="stanford.js"></script>
 
 <section style="width: 100%; padding-top: 50px;">
 
@@ -26,173 +33,28 @@
       </ul>
     </div>
 
-<script>
-
-// TODO(jheppler):
-//  - Can I force the network to fit inside the SVG width/height dimensions?
-
-// ========================== Global variables ========================== 
-
-var width = 1300,
-    height = 650;
-
-queue()
-    .defer(d3.csv, "./d/network.csv")
-    .defer(d3.json, "/d/world-50m.json")
-    .defer(d3.csv, "/d/locations_lat_long.csv")
-    .await(ready);
-
-function ready(error, csv_data, world, locations) {
-
-  // ========================== Mapping the network ==========================
-
-  var map_projection = d3.geo.eckert3()
-      .translate([width / 2, height / 2])
-      .rotate([50, 0])
-      .center([0, 40])
-      .scale(550);
-
-  var map_path = d3.geo.path()
-      .projection(map_projection);
-
-  var svg = d3.select("body").append("svg")
-      .attr("width", width)
-      .attr("height", height);
-
-  svg.append("rect")
-    .attr("width", width)
-    .attr("height", height);
-
-  var g = svg.append("g");
-
-  g.selectAll("path")
-      .data(topojson.feature(world, world.objects.countries).features)
-    .enter().append("path")
-      .attr("d", map_path)
-      .attr("class", "feature");
-
-  g.append("path")
-      .datum(topojson.mesh(world, world.objects.countries, function(a, b) { return a !== b; }))
-      .attr("class", "mesh")
-      .attr("d", map_path);
-
-  // ========================== Network viz ==========================
-
-  // array of nodes
-  var nodes = {};
-
-  // compute nodes from links
-  csv_data.forEach(function(link) {
-      key = link.target + '@' + link.source;
-      link.target = nodes[key] || (nodes[key] = {name: link.target});
-      link.source = nodes[link.source] || (nodes[link.source] = {name: link.source});
-  })
-
-  var locationHash = {};
-
-  for (loc in locations) {
-    locationHash[locations[loc].location] = locations[loc];
-  }
-
-  for (n in nodes) {
-    if(locationHash[nodes[n].name]) {
-      nodes[n].lat = locationHash[nodes[n].name].latitude
-      nodes[n].long = locationHash[nodes[n].name].longitude
-
-    }
-  }
-
-  var force = d3.layout.force()
-    .nodes(d3.values(nodes))
-    .links(csv_data)
-    .size([width, height])
-    .linkDistance(70)
-    .charge(-10)
-    .gravity(0)
-    .on("tick", tick)
-    .start();
-
-  // add the edges
-  var path = svg.append("g").selectAll("path")
-    .data(force.links())
-  .enter().append("path")
-    .attr("class", "link");
-
-  // define the nodes
-  var node = svg.selectAll(".node")
-    .data(force.nodes())
-  .enter().append("g")
-    .attr("class", "node")
-    .on("mouseover", mouseover)
-    .on("mouseout", mouseout)
-    .call(force.drag);
-
-  // add the nodes
-  node.append("circle")
-    .attr("r", 5)
-    .style("fill", "#8a0000");
-
-  // add the text 
-  node.append("text")
-    .attr("x", 12)
-    .attr("dy", ".35em")
-    .text(function(d) { return d.name; });
-
-    for (n in nodes) {
-      if(nodes[n].long) {
-        var projectedNode = map_projection([nodes[n].long,nodes[n].lat])
-        nodes[n].x = projectedNode[0];
-        nodes[n].px = projectedNode[0];
-        nodes[n].y = projectedNode[1];
-        nodes[n].py = projectedNode[1];
-        nodes[n].fixed = true;
-
-      }
-
-    }
-
-
-  // ========================== Functions ==========================
-
-  // add the edges
-  function tick() {
-    path.attr("d", function(d) {
-        var dx = d.target.x - d.source.x,
-            dy = d.target.y - d.source.y,
-            dr = Math.sqrt(dx * dx + dy * dy);
-        return "M" + 
-            d.source.x + "," + 
-            d.source.y + "A" + 
-            dr + "," + dr + " 0 0,1 " + 
-            d.target.x + "," + 
-            d.target.y;
-    });
-
-    node
-        .attr("transform", function(d) { 
-            return "translate(" + d.x + "," + d.y + ")"; });
-  }
-
-  // resize nodes on mouseover and mouseout
-  function mouseover() {
-    d3.select(this).select("circle").transition()
-        .duration(750)
-        .attr("r", 8);
-  }  
-  function mouseout() {
-    d3.select(this).select("circle").transition()
-        .duration(750)
-        .attr("r", 5);
-  }
-};
-
-</script>
-
 </section>
 
-<!-- <section class="description">
+<div class="multiple" id="stanford_network"></div>
+
+<div class="multiple" id="cambridge_network"></div>
+
+<div class="multiple" id="berlin_network"></div>
+
+<div class="multiple" id="brussels_network"></div>
+
+<div class="multiple" id="maastricht_network"></div>
+
+<div class="multiple" id="madrid_network"></div>
+
+<div class="multiple" id="paris_network"></div>
+
+
+<!--
+<section class="description">
   <p>Something something something.</p>
 </section>
+
 
 <div id="about">
   <ul>
@@ -200,7 +62,7 @@ function ready(error, csv_data, world, locations) {
     <li>Stanford University</li>
     <li>Visualized by Jason A. Heppler</li>
   </ul>
-</div> -->
+</div>-->
 
 </body>
 </html>
